--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,10 @@ platforms = any
 
 [options]
 python_requires = >=3.7
-packages = gptcli
+packages = gpt_cli
 install_requires =
     openai >= 0.27.2
 
 [options.entry_points]
 console_scripts =
-    gpt-chat = gptcli.chat_cli:main
+    gpt-chat = gpt_cli.chat_cli:main
