--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,19 @@ license: MIT
 platforms = any
 
 [options]
+platforms = any
 python_requires = >=3.7
-packages = gpt_cli
+packages = find_namespace:
+packages_dir =
+    = src
 install_requires =
     openai >= 0.27.2
 
 [options.entry_points]
 console_scripts =
     gpt-chat = gpt_cli.chat_cli:main
+
+[options.packages.find]
+where = src
+exclude =
+    tests*
