--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,10 @@ install_requires =
 console_scripts =
     gpt-chat = gptcli.chat_cli:main
 
+[options.extras_require]
+test =
+    twine >= 4.0.2
+
 [options.packages.find]
 where = src
 exclude =
