added build to check target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,4 @@ jobs:
       - name: running python tests
         run: tox
       - name: checking python package
-        run: |
-          ls -alh
-          make check
+        run: make check
