--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   unit-tests:
-    continue-on-error: true
+    continue-on-error: false
     strategy:
       matrix:
         python-version: ['3.9', '3.10', '3.11']
