--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ envlist = py39, py310, py311
 skip_missing_interpreters = true
 
 [testenv]
+deps =
+    .
+    pylint
 passenv = *
 commands =
+    pylint src
     python -m unittest discover tests -v
