--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,15 @@
 name = gptcli
 version = 1.0.0
 description = This interacts with Openai GPT with a cli interface
+long_description = file: README.md
+long_description_content_type = text/markdown
 author = pafable
 license: MIT
 platforms = any
 
 [options]
 platforms = any
-python_requires = >=3.7
+python_requires = >=3.9
 packages = find_namespace:
 packages_dir =
     = src
@@ -17,7 +19,11 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    gpt-chat = gpt_cli.chat_cli:main
+    gpt-chat = gptcli.chat_cli:main
+
+[options.extras_require]
+test =
+    twine >= 4.0.2
 
 [options.packages.find]
 where = src
