--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,14 @@
 [metadata]
 name = gptcli
-version = 1.0.0
+version = 1.0.1
 description = This interacts with Openai GPT with a cli interface
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = pafable
 license: MIT
 platforms = any
+requires-dist =
+    openai >= 0.27.2
 
 [options]
 platforms = any
