added get image

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,8 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    gpt-chat = gptcli.chat_cli:main
+    gpt-chat = gptcli.chat:main
+    gpt-image = gptcli.image:main
 
 [options.extras_require]
 test =
