fixed upload pipeline

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -8,9 +8,11 @@ env:
 jobs:
   upload-package:
     runs-on: ubuntu-latest
-    python-version: '3.11'
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4.5.0
+        with:
+          python-version: '3.11'
       - name: uploading package
         run: make upload
         env:
