updated build to use pyproject.toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description_content_type = text/markdown
 author = pafable
 license: MIT
 platforms = any
-requires-dist =
+requires_dist =
     openai >= 0.27.2
 
 [options]
