--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,5 @@ deps =
     pylint
 passenv = *
 commands =
-    pylint src
+    python -m pylint src --min-similarity-lines 10
     python -m unittest discover tests -v
